--- a/Project/Source/Presentation/Main/Base.lproj/Main.storyboard
+++ b/Project/Source/Presentation/Main/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="kSc-ix-vbl">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="wEH-dt-b2O">
     <device id="retina5_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -7,26 +7,6 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Item-->
-        <scene sceneID="gfj-w5-Dnn">
-            <objects>
-                <navigationController id="kSc-ix-vbl" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="S1j-CG-wJ9"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="V3r-IN-pGx">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                        <textAttributes key="titleTextAttributes">
-                            <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        </textAttributes>
-                    </navigationBar>
-                    <connections>
-                        <segue destination="wEH-dt-b2O" kind="relationship" relationship="rootViewController" id="veg-uo-CLm"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Ulz-pN-cmg" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-2346" y="761"/>
-        </scene>
         <!--MainChosen-->
         <scene sceneID="SXC-Qz-Z7q">
             <objects>
@@ -47,10 +27,10 @@
             </objects>
             <point key="canvasLocation" x="-501" y="761"/>
         </scene>
-        <!--Tab Bar Controller-->
+        <!--Main Bar View Controller-->
         <scene sceneID="eSC-xp-ixi">
             <objects>
-                <tabBarController id="wEH-dt-b2O" sceneMemberID="viewController">
+                <tabBarController storyboardIdentifier="MainBarViewController" id="wEH-dt-b2O" customClass="MainBarViewController" customModule="Project" customModuleProvider="target" sceneMemberID="viewController">
                     <navigationItem key="navigationItem" id="Pes-Q2-pD8"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="4xa-CK-e3l">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
