--- a/Project/Source/Presentation/MainChosen/MainChosen.storyboard
+++ b/Project/Source/Presentation/MainChosen/MainChosen.storyboard
@@ -13,7 +13,7 @@
         <scene sceneID="hbE-IZ-5B9">
             <objects>
                 <viewController id="ABA-iP-ymh" customClass="MainChosenViewController" customModule="Project" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="YNr-UU-hp2">
+                    <view key="view" contentMode="scaleToFill" id="YNr-UU-hp2" customClass="TestUIView" customModule="Project" customModuleProvider="target">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
@@ -71,72 +71,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="WiX-Eo-Mhx" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="820" y="368"/>
-        </scene>
-        <!--Test View Controller-->
-        <scene sceneID="kes-b9-qhk">
-            <objects>
-                <viewController id="gmq-M3-JIL" customClass="TestViewController" customModule="Project" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="XIN-SJ-cT6">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="knJ-Ai-XUa">
-                                <rect key="frame" x="122" y="95" width="170" height="170"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="170" id="G3H-e4-4m2"/>
-                                    <constraint firstAttribute="width" constant="170" id="lcj-DT-dBy"/>
-                                </constraints>
-                            </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" alpha="0.80000000000000004" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$ 78" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B3z-KJ-JZc">
-                                <rect key="frame" x="46" y="793" width="56.5" height="34"/>
-                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="29"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Cactus" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="acp-TD-EXy">
-                                <rect key="frame" x="46" y="552.5" width="323" height="46"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="46" id="WIb-Ju-9zu"/>
-                                    <constraint firstAttribute="width" constant="323" id="z9v-6y-Wun"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" name="Helvetica-Bold" family="Helvetica" pointSize="46"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SIMULAR" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="n5U-SA-2SA">
-                                <rect key="frame" x="46" y="508" width="323" height="25"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="323" id="CNh-Sj-4Ef"/>
-                                    <constraint firstAttribute="height" constant="25" id="HYR-Xo-Ygp"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="21"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
-                        <viewLayoutGuide key="safeArea" id="ehz-nB-MSL"/>
-                        <color key="backgroundColor" red="0.10980392156862745" green="0.58823529411764708" blue="0.41568627450980389" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <constraints>
-                            <constraint firstItem="B3z-KJ-JZc" firstAttribute="leading" secondItem="ehz-nB-MSL" secondAttribute="leading" constant="46" id="1gf-lz-7Kg"/>
-                            <constraint firstItem="knJ-Ai-XUa" firstAttribute="top" secondItem="ehz-nB-MSL" secondAttribute="top" constant="51" id="4bV-1m-WFM"/>
-                            <constraint firstItem="knJ-Ai-XUa" firstAttribute="centerX" secondItem="ehz-nB-MSL" secondAttribute="centerX" id="O9u-bv-iji"/>
-                            <constraint firstItem="ehz-nB-MSL" firstAttribute="bottom" secondItem="B3z-KJ-JZc" secondAttribute="bottom" constant="35" id="OcO-fv-th9"/>
-                            <constraint firstItem="n5U-SA-2SA" firstAttribute="leading" secondItem="ehz-nB-MSL" secondAttribute="leading" constant="46" id="YBc-Hh-W8I"/>
-                            <constraint firstItem="acp-TD-EXy" firstAttribute="leading" secondItem="ehz-nB-MSL" secondAttribute="leading" constant="46" id="dQ6-Fx-QiB"/>
-                            <constraint firstItem="acp-TD-EXy" firstAttribute="top" secondItem="n5U-SA-2SA" secondAttribute="bottom" constant="19.5" id="fq2-Ht-ts9"/>
-                            <constraint firstItem="n5U-SA-2SA" firstAttribute="centerY" secondItem="ehz-nB-MSL" secondAttribute="centerY" constant="67.5" id="hve-aI-gS2"/>
-                        </constraints>
-                    </view>
-                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-                    <connections>
-                        <outlet property="image" destination="knJ-Ai-XUa" id="Lsh-Wf-Qva"/>
-                        <outlet property="label" destination="acp-TD-EXy" id="LMW-KE-Kkw"/>
-                        <outlet property="labeltwo" destination="B3z-KJ-JZc" id="VpF-5c-aRD"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="APj-rj-OZB" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-784.05797101449286" y="385.71428571428572"/>
         </scene>
         <!--Kanji-->
         <scene sceneID="Dgc-79-Kom">
