--- a/Project/Source/Presentation/MainChosen/TestControl.xib
+++ b/Project/Source/Presentation/MainChosen/TestControl.xib
@@ -8,7 +8,14 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TestUIView" customModule="Project" customModuleProvider="target">
+            <connections>
+                <outlet property="image" destination="bbh-Lr-JUv" id="Ed9-xP-vWs"/>
+                <outlet property="labelOne" destination="JvA-UK-N56" id="rj6-4K-d1l"/>
+                <outlet property="labelThree" destination="qKH-L2-JLJ" id="f9w-H7-Mth"/>
+                <outlet property="labelTwo" destination="8Ex-3T-OMw" id="Hx7-5G-rGD"/>
+            </connections>
+        </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="T0u-Cp-dt8">
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
