--- a/Project/Source/Presentation/MainChosen/MainChosen.storyboard
+++ b/Project/Source/Presentation/MainChosen/MainChosen.storyboard
@@ -13,7 +13,7 @@
         <scene sceneID="hbE-IZ-5B9">
             <objects>
                 <viewController id="ABA-iP-ymh" customClass="MainChosenViewController" customModule="Project" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="YNr-UU-hp2" customClass="TestUIView" customModule="Project" customModuleProvider="target">
+                    <view key="view" contentMode="scaleToFill" id="YNr-UU-hp2">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
