--- a/Project/Source/Presentation/MainChosen/MainChosen.storyboard
+++ b/Project/Source/Presentation/MainChosen/MainChosen.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="ABA-iP-ymh">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina5_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
@@ -14,14 +14,14 @@
             <objects>
                 <viewController id="ABA-iP-ymh" customClass="MainChosenViewController" customModule="Project" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="YNr-UU-hp2">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ms9-ay-6QQ">
-                                <rect key="frame" x="32" y="151" width="350" height="85"/>
+                                <rect key="frame" x="32" y="190" width="350" height="85"/>
                                 <color key="backgroundColor" red="0.98039215690000003" green="0.90980392160000001" blue="0.87058823529999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="85" id="f56-9K-E6J"/>
+                                    <constraint firstAttribute="height" constant="85" id="50o-oC-tsf"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" weight="black" pointSize="30"/>
                                 <state key="normal" title="АЛФАВИТ">
@@ -32,7 +32,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="T6M-TW-zT1">
-                                <rect key="frame" x="34" y="296" width="346" height="91"/>
+                                <rect key="frame" x="32" y="295" width="350" height="91"/>
                                 <color key="backgroundColor" red="0.98039215690000003" green="0.90980392160000001" blue="0.87058823529999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <fontDescription key="fontDescription" type="system" weight="black" pointSize="30"/>
                                 <state key="normal" title="ИЕРОГЛИФЫ">
@@ -42,37 +42,50 @@
                                     <segue destination="YIk-zb-wLk" kind="show" id="iCj-fu-J3q"/>
                                 </connections>
                             </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="yOk-WP-MwO">
+                                <rect key="frame" x="132" y="20" width="150" height="150"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="150" id="Ven-qY-EuR"/>
+                                    <constraint firstAttribute="height" constant="150" id="orE-Mi-yjZ"/>
+                                </constraints>
+                            </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jaC-Hv-TcP" customClass="PushElement" customModule="Project" customModuleProvider="target">
-                                <rect key="frame" x="34" y="447" width="346" height="91"/>
+                                <rect key="frame" x="32" y="406" width="350" height="91"/>
                                 <color key="backgroundColor" systemColor="linkColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="91" id="v73-0j-U2c"/>
+                                </constraints>
                             </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="WZN-bL-nVc"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" red="0.10980392160000001" green="0.58823529409999997" blue="0.41568627450000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="Ms9-ay-6QQ" firstAttribute="top" secondItem="WZN-bL-nVc" secondAttribute="top" constant="107" id="EVS-Qe-nv7"/>
-                            <constraint firstItem="T6M-TW-zT1" firstAttribute="top" secondItem="Ms9-ay-6QQ" secondAttribute="bottom" constant="60" id="G4V-4p-gqw"/>
-                            <constraint firstItem="jaC-Hv-TcP" firstAttribute="width" secondItem="T6M-TW-zT1" secondAttribute="width" id="IUq-9M-BGz"/>
-                            <constraint firstItem="jaC-Hv-TcP" firstAttribute="top" secondItem="T6M-TW-zT1" secondAttribute="bottom" constant="60" id="Nhd-aD-73f"/>
-                            <constraint firstItem="jaC-Hv-TcP" firstAttribute="leading" secondItem="T6M-TW-zT1" secondAttribute="leading" id="Nuv-tz-Uw0"/>
-                            <constraint firstItem="T6M-TW-zT1" firstAttribute="height" secondItem="Ms9-ay-6QQ" secondAttribute="height" multiplier="1.07059" id="P2z-hq-e3a"/>
-                            <constraint firstItem="T6M-TW-zT1" firstAttribute="centerX" secondItem="WZN-bL-nVc" secondAttribute="centerX" id="Pd8-Db-LVh"/>
-                            <constraint firstItem="T6M-TW-zT1" firstAttribute="width" secondItem="Ms9-ay-6QQ" secondAttribute="width" multiplier="0.960938" constant="10" id="VFA-QX-c65"/>
-                            <constraint firstItem="jaC-Hv-TcP" firstAttribute="height" secondItem="T6M-TW-zT1" secondAttribute="height" id="aoU-VH-YnC"/>
-                            <constraint firstItem="jaC-Hv-TcP" firstAttribute="centerX" secondItem="WZN-bL-nVc" secondAttribute="centerX" id="igS-fX-Pwa"/>
-                            <constraint firstItem="Ms9-ay-6QQ" firstAttribute="centerX" secondItem="WZN-bL-nVc" secondAttribute="centerX" id="kws-xr-hpO"/>
-                            <constraint firstItem="Ms9-ay-6QQ" firstAttribute="leading" secondItem="WZN-bL-nVc" secondAttribute="leading" constant="32" id="wyr-J9-0gh"/>
+                            <constraint firstItem="WZN-bL-nVc" firstAttribute="trailing" secondItem="jaC-Hv-TcP" secondAttribute="trailing" constant="32" id="4sT-SS-COM"/>
+                            <constraint firstItem="T6M-TW-zT1" firstAttribute="trailing" secondItem="Ms9-ay-6QQ" secondAttribute="trailing" id="BRg-sl-4gi"/>
+                            <constraint firstItem="Ms9-ay-6QQ" firstAttribute="leading" secondItem="WZN-bL-nVc" secondAttribute="leading" constant="32" id="DeY-zm-3Za"/>
+                            <constraint firstItem="jaC-Hv-TcP" firstAttribute="leading" secondItem="WZN-bL-nVc" secondAttribute="leading" constant="32" id="JWY-6z-DQ2"/>
+                            <constraint firstItem="Ms9-ay-6QQ" firstAttribute="top" secondItem="yOk-WP-MwO" secondAttribute="bottom" constant="20" id="JkT-b7-SVF"/>
+                            <constraint firstItem="T6M-TW-zT1" firstAttribute="leading" secondItem="Ms9-ay-6QQ" secondAttribute="leading" id="MCr-n0-sjf"/>
+                            <constraint firstItem="T6M-TW-zT1" firstAttribute="top" secondItem="Ms9-ay-6QQ" secondAttribute="bottom" constant="20" id="Qkr-rU-RKc"/>
+                            <constraint firstItem="yOk-WP-MwO" firstAttribute="centerX" secondItem="WZN-bL-nVc" secondAttribute="centerX" id="WsD-N7-CVE"/>
+                            <constraint firstItem="T6M-TW-zT1" firstAttribute="height" secondItem="Ms9-ay-6QQ" secondAttribute="height" multiplier="1.07059" id="Xm9-Ng-bVt"/>
+                            <constraint firstItem="yOk-WP-MwO" firstAttribute="top" secondItem="WZN-bL-nVc" secondAttribute="top" constant="20" id="dQQ-cX-xAf"/>
+                            <constraint firstItem="T6M-TW-zT1" firstAttribute="width" secondItem="Ms9-ay-6QQ" secondAttribute="width" multiplier="0.988571" constant="4" id="g5P-zk-Yr0"/>
+                            <constraint firstItem="jaC-Hv-TcP" firstAttribute="centerX" secondItem="WZN-bL-nVc" secondAttribute="centerX" id="hPm-zu-aa0"/>
+                            <constraint firstItem="WZN-bL-nVc" firstAttribute="trailing" secondItem="Ms9-ay-6QQ" secondAttribute="trailing" constant="32" id="n5m-9R-xNP"/>
+                            <constraint firstItem="jaC-Hv-TcP" firstAttribute="top" secondItem="T6M-TW-zT1" secondAttribute="bottom" constant="20" id="wlM-lz-mlP"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Главная" image="book" catalog="system" id="fs6-Dx-Xgo"/>
                     <navigationItem key="navigationItem" title="Main" id="mr8-s0-U6Z"/>
                     <connections>
                         <outlet property="customButtom" destination="jaC-Hv-TcP" id="mEq-p0-aiQ"/>
+                        <outlet property="image" destination="yOk-WP-MwO" id="YRc-Ha-i5U"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uo0-9E-rFq" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="105.79710144927537" y="385.71428571428572"/>
+            <point key="canvasLocation" x="105.79710144927537" y="385.59782608695656"/>
         </scene>
         <!--Alphabet-->
         <scene sceneID="qcn-pZ-yUt">
@@ -105,9 +118,6 @@
         </systemColor>
         <systemColor name="linkColor">
             <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
     </resources>
 </document>
